<resources>
    <string name="app_name">Film Catalogue</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="movies_favorite">Movies Favorite</string>
    <string name="tv_shows_favorite">TV Shows Favorite</string>
    <string name="name_films">Film Name</string>
    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="release_date">Release Date:</string>
    <string name="genre">Genre:</string>
    <string name="popularity">Popularity:</string>
    <string name="rating_user">Rating User:</string>
    <string name="description">Description:</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="language">en-US</string>
    <string name="film_favorite">Film Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="delete">Delete</string>
    <string name="no_data">NO DATA</string>
    <string name="retry">RETRY</string>
    <string name="appwidget_text">MY FILM FAVORITE</string>
    <string name="add_widget">Add Widget</string>
    <string name="search">Search Film Title</string>
    <string name="add_favorite">added to favorite</string>
    <string name="delete_favorite">deleted from favorite</string>
    <string name="error_message">Something error, Please try again!</string>
    <string name="no_film_today">No film today</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="daily_title">Whats New?</string>
    <string name="daily_desc">Check out latest film!</string>
    <string name="today_release">Film just released!</string>
    <string name="notifications">Notifications</string>
    <string name="change_notification_settings">Change Notification Settings</string>
    <string name="summary_daily_reminder">You will received daily reminder every 7 AM</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="summary_release_reminder">You will receive daily movie release info every 8 AM</string>
    <string name="release_reminder">New Film Reminder</string>
</resources>
