<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_film_favorite"
            android:title="@string/film_favorite"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_change_settings"
            android:title="@string/change_language_settings"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_notification_settings"
            android:title="@string/change_notification_settings"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_search_menu"
            android:icon="@drawable/ic_search_white_24px"
            android:orderInCategory="100"
            android:title="@string/search"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="android.support.v7.widget.SearchView"
    />
</menu>