<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.dicoding.prayogo.movieapp.NotificationActivity">
    <TextView
            android:id="@+id/tv_daily_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_reminder"
            android:layout_marginTop="25dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textSize="25sp"
            android:textStyle="bold"
    />
    <TextView
            android:id="@+id/tv_daily_reminder_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_daily_reminder"
            android:layout_below="@id/tv_daily_reminder"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textSize="15sp"
    />
    <Switch
            android:id="@+id/switch_daily_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="140dp"
            android:layout_toEndOf="@id/tv_daily_reminder"/>

    <TextView
            android:id="@+id/tv_release_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_reminder"
            android:layout_marginTop="25dp"
            android:layout_below="@id/tv_daily_reminder_desc"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textSize="25sp"
            android:textStyle="bold"
    />
    <TextView
            android:id="@+id/tv_release_reminder_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_release_reminder"
            android:layout_below="@id/tv_release_reminder"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textSize="15sp"
    />
    <Switch
            android:id="@+id/switch_release_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="90dp"
            android:layout_below="@id/tv_daily_reminder_desc"
            android:layout_toEndOf="@id/tv_release_reminder"
    />

</RelativeLayout>
