<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relative_layout_container_item_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
            android:id="@+id/img_photo"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/name_films"/>
    <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/name_films"
            android:textSize="28sp"
            android:textStyle="bold" />
    <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/img_photo"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/lorem" />
    <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_description"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/delete"
            android:backgroundTint="#E91E63"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

</RelativeLayout>