<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.dicoding.prayogo.movieapp.DetailFilmActivity">
    <ImageView
            android:id="@+id/img_photo"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/name_films" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_name" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/name_films"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/tv_release_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/release_date"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toStartOf="@+id/tv_release_date"
            app:layout_constraintStart_toEndOf="@+id/img_photo" app:layout_constraintHorizontal_bias="0.9"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="125dp"/>
    <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/release_date"
            android:layout_marginTop="125dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0"
            app:layout_constraintStart_toEndOf="@+id/tv_release_date_title" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="5dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/tv_genre_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_release_date_title"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/genre"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_photo" android:layout_marginStart="8dp"
            android:layout_marginTop="150dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_genre_title"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/genre" app:layout_constraintStart_toEndOf="@+id/tv_genre_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            android:layout_marginTop="150dp"
            android:layout_marginStart="5dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/tv_popularity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_genre_title"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/popularity"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_photo" android:layout_marginStart="8dp"
            android:layout_marginTop="235dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_popularity_title"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/popularity"
            app:layout_constraintStart_toEndOf="@+id/tv_popularity_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="235dp"
            android:layout_marginStart="5dp" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/tv_rating_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_popularity_title"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/rating_user"
            android:textStyle="bold"
            android:layout_marginTop="285dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_photo" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_rating_title"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/rating_user"
            app:layout_constraintStart_toEndOf="@+id/tv_rating_title"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="285dp" app:layout_constraintHorizontal_bias="0.05"
            android:layout_marginStart="5dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/tv_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_photo"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/img_photo"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_description_title"
            android:text="@string/description" app:layout_constraintTop_toBottomOf="@+id/tv_description_title"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:textAlignment="textStart"/>

</android.support.constraint.ConstraintLayout>
